--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,21 @@
 [project]
-name = "imd-aoi-pipeline"
+name = "aoi-pipeline"
 version = "0.1.0"
-description = "IMD 0.25° daily rainfall data pipeline for AOI subset and export"
+description = "data download over AOI subset and export"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "imdlib",
-    "xarray",
-    "rioxarray",
-    "geopandas",
-    "pyogrio",
-    "shapely",
-    "tqdm",
-    "dask",
-    "cftime",
-    "pandas",
     "pystac-client>=0.9.0",
     "rasterio>=1.4.3",
     "stackstac>=0.5.1",
     "ipykernel>=6.30.1",
+    "imdlib>=0.1.20",
+    "xarray>=2025.8.0",
+    "rioxarray>=0.19.0",
+    "geopandas>=1.1.1",
+    "pyogrio>=0.11.1",
+    "tqdm>=4.67.1",
+    "dask>=2025.7.0",
+    "cftime>=1.6.4.post1",
+    "pandas>=2.3.2",
 ]
